[package]
name = "drift-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "drift"
path = "src/main.rs"

[[bin]]
name = "create_fixtures"
path = "src/bin/create_fixtures.rs"

[dependencies]
drift-protocol = { path = "../drift-protocol" }
drift-codec = { path = "../drift-codec" }
drift-runtime-cpu = { path = "../drift-runtime-cpu" }
clap = { version = "4.5", features = ["derive"] }
blake3 = { workspace = true }
hex = "0.4"
